Bug 115634 - in special characters dialog buttons for recent and favorite characters are not being scaled larger on high resolution screens
Summary: in special characters dialog buttons for recent and favorite characters are n...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.0.0.3 release
Hardware: x86-64 (AMD64) All
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0
Keywords:
: 138065 138988 151317 151685 (view as bug list)
Depends on:
Blocks: HiDPI Special-Character
  Show dependency treegraph
 
Reported: 2018-02-11 18:06 UTC by bordfeldt
Modified: 2022-10-21 17:25 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Screenshot of special character dialogue on Mac OSX Retina / HiDPI (253.41 KB, image/jpeg)
2021-05-14 21:35 UTC, Chris Shaw
Details
The Special Character split button -- os/DE scaled 225% (83.31 KB, image/png)
2022-10-04 04:24 UTC, V Stuart Foote
Details
Special Character dialog -- os/DE scaled 225% (162.20 KB, image/png)
2022-10-04 04:25 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bordfeldt 2018-02-11 18:06:59 UTC
Description:
LO 6.0.0.3 on Windows 10 pro: On my Surface Pro IV with a screen resolution of 2376x1824 in the special charcaters dialog are the buttons for recent and favorite characters too small.
So they are hard to see.

Steps to Reproduce:
1.open a new document in writer
2.open the special characters dialog by clicking the button
3.buttons for recent and favorite characters are too small

Actual Results:  
buttons for recent and favorite characters are too small

Expected Results:
should be at least as big as in the select box above where you can select a special character


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:58.0) Gecko/20100101 Firefox/58.0
Comment 1 Buovjaga 2018-03-05 17:55:21 UTC
Do you have HiDPI scaling settings?
Comment 2 bordfeldt 2018-03-05 18:32:18 UTC
yes, 200%
Comment 3 Buovjaga 2018-04-11 16:32:07 UTC
Confirmed with a HiDPI display & Manjaro Linux

Version: 6.0.2.1.0+
Build ID: 6.0.2-1
CPU threads: 4; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 4 QA Administrators 2019-06-22 02:50:30 UTC Comment hidden (noise, obsolete)
Comment 5 V Stuart Foote 2020-12-17 14:46:36 UTC
*** Bug 138988 has been marked as a duplicate of this bug. ***
Comment 6 Chris Shaw 2021-05-14 21:34:37 UTC
Confirmed on Mac OSX Retina display

Version: 7.1.3.2 / LibreOffice Community
Build ID: 47f78053abe362b9384784d31a6e56f8511eb1c1
CPU threads: 4; OS: Mac OS X 10.14.6; UI render: default; VCL: osx
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 7 Chris Shaw 2021-05-14 21:35:25 UTC
Created attachment 172010 [details]
Screenshot of special character dialogue on Mac OSX Retina / HiDPI
Comment 8 Damian Hofmann 2022-06-15 19:41:35 UTC
Retested with LO 7.3.3.2. Still doesn't scale correctly.

Version: 7.3.3.2 (x64) / LibreOffice Community
Build ID: d1d0ea68f081ee2800a922cac8f79445e4603348
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-CH (de_CH); UI: en-US
Calc: threaded
Comment 9 V Stuart Foote 2022-10-03 19:40:29 UTC
*** Bug 151317 has been marked as a duplicate of this bug. ***
Comment 10 V Stuart Foote 2022-10-03 19:41:44 UTC
*** Bug 138065 has been marked as a duplicate of this bug. ***
Comment 11 V Stuart Foote 2022-10-04 04:19:46 UTC
Seems like we are somehow not scaling the Recently used/Favorite character bar widgets with the rest of the UI--and they incorrectly receive a "fixed" size that is too small.

So here are some steps to reproduce:

1) Windows 10 on ~105dpi 1920x1200 monitor (same for 1920x1080 FHD)

2) set Windows Display Settings -> Scale and Layout -> Advanced scaling settings and set a "Custom scaling setting" of 225%

3) restart Windows to allow the Custom scaling to assert

4) open LibreOffice

5) select the 'Insert Special Character' split button

6) allow it to open showing its "Favorites" and "Recently used" character listbox picker -- note its diminutive size relative to other UI text

7) select the "More Characters..." dialog button

8) allow the dialog to open and note the "Favorites" and "Recently used" character  bar "pickers" remain the diminutive size relative to other UI text.
Comment 12 V Stuart Foote 2022-10-04 04:24:10 UTC
Created attachment 182816 [details]
The Special Character split button -- os/DE scaled 225%
Comment 13 V Stuart Foote 2022-10-04 04:25:06 UTC
Created attachment 182817 [details]
Special Character dialog -- os/DE scaled 225%
Comment 14 Caolán McNamara 2022-10-05 14:50:04 UTC
https://gerrit.libreoffice.org/c/core/+/140984 might fix this, can't check it right now, but I'm hopeful
Comment 15 Commit Notification 2022-10-05 15:45:50 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8b7df7b9ecf839584c74518456e5f01101eb9b5c

tdf#115634 recent/favorite widgets not hidpi scaled

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 V Stuart Foote 2022-10-10 18:33:24 UTC
Verified on Windows 10 with
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: d72571fdd47c627efcd0dff92fbe8a9747f92932
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

Scaling the UI to 225% the SCD split button, and on the SCD dialog, the 'Favorites' and 'Recently used' button bars are being scaled with the UI.

They are not too large at 100% nor too small at 200%, and scale with the UI as set.

It is a nit, but the "2" integer scale might make the buttons just a little too large as scaled, can scaling here be made fractional at ~1.75?  If not, it is much improved as is.

Thanks! Caolán
Comment 17 V Stuart Foote 2022-10-21 17:25:32 UTC
*** Bug 151685 has been marked as a duplicate of this bug. ***