tdf#115634 recent/favorite widgets not hidpi scaled

Change-Id: I65c74bd443b91827f62d46968ce8fda948fc6c26
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140984
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>